<?xml version="1.0"?>
<package>
  <name>pc_gps</name>
  <version>1.0.0</version>
  <description>The pointcloud ground plane segmentation package</description>

  <maintainer email="yuc6@illinois.edu">yuc6</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>

  <export></export>
</package>
