<?xml version="1.0"?>
<package format="2">
  <name>pc_gps</name>
  <version>1.0.0</version>
  <description>The pointcloud ground plane segmentation package</description>

  <maintainer email="yuc6@illinois.edu">yuc6</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
